<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:openDrawer="start"
    tools:context=".AdminPage">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        app:headerLayout="@layout/activity_menu__header"
        app:menu="@menu/main_menu" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/admin_header"
            android:layout_width="400dp"
            android:layout_height="57dp"
            android:contentDescription="@string/descrption" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/nav3"
            android:contentDescription="@string/nav3" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/logout"
            android:layout_marginStart="320dp"
            android:layout_marginTop="9dp"
            android:contentDescription="@string/logout" />

            <ImageView
                android:layout_width="400dp"
                android:layout_height="57dp"
                android:layout_marginTop="511dp"
                android:contentDescription="@string/admin_footer"
                android:src="@drawable/admin_footer" />
            <ImageView
                android:layout_width="400dp"
                android:layout_height="151dp"
                android:src="@drawable/header_name"
                android:layout_marginTop="55dp"
                android:contentDescription="@string/admin_header_name" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/pro"
            android:layout_marginTop="62dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/admin_header_logo" />
        <TextView
            android:id="@+id/admin_header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miyuru_kanishka"
            android:textSize="20sp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="140dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="140dp"
            android:textColor="#FFFFFF"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/add_payment"
            android:layout_marginStart="40dp"
            android:layout_marginTop="220dp"
            android:contentDescription="@string/payment" />
        <ImageView
            android:id="@+id/addPSTDBtnId"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/add_student"
            android:layout_marginTop="220dp"
            android:layout_marginStart="200dp"
            android:contentDescription="@string/add_student" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="360dp"
            android:contentDescription="@string/financial_dashboard"
            android:src="@drawable/financial_dashboard" />

        <ImageView
            android:id="@+id/addAdmin"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="360dp"
            android:contentDescription="@string/add_admin"
            android:src="@drawable/add_admin" />
    </RelativeLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>