<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="400dp"
                android:layout_height="57dp"
                android:src="@drawable/issue_review_header"
                android:contentDescription="@string/issue_header" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/nav3"
                android:contentDescription="@string/nav3" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logout"
                android:layout_marginStart="320dp"
                android:layout_marginTop="9dp"
                android:contentDescription="@string/issue_logout" />

        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="500dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/issue_rectangle"
                    android:contentDescription="@string/rectangle_issue" />

                    <EditText
                        android:id="@+id/adminId"
                        android:layout_width="290dp"
                        android:layout_height="50dp"
                        android:hint="@string/admin_id_hint"
                        android:textSize="24sp"
                        android:background="@drawable/issue_button"
                        android:gravity="center"
                        android:layout_marginTop="-430dp"
                        android:layout_marginStart="35dp"
                        android:textColorHint="#969696"
                        android:inputType="text"
                        android:autofillHints="" />

                    <EditText
                        android:id="@+id/adminFirstName"
                        android:layout_width="290dp"
                        android:layout_height="50dp"
                        android:hint="@string/admin_first_name_hint"
                        android:textSize="24sp"
                        android:background="@drawable/issue_button"
                        android:gravity="center"
                        android:layout_marginTop="50dp"
                        android:layout_marginStart="35dp"
                        android:textColorHint="#969696"
                        android:inputType="text"
                        android:autofillHints="" />

                <EditText
                    android:id="@+id/adminLastName"
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:hint="@string/admin_last_name_hint"
                    android:textSize="24sp"
                    android:background="@drawable/issue_button"
                    android:gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="35dp"
                    android:textColorHint="#969696"
                    android:inputType="text"
                    android:autofillHints="" />

                    <ImageView
                        android:id="@+id/adminSubmit"
                        android:layout_width="310dp"
                        android:layout_height="50dp"
                        android:src="@drawable/issue_submit"
                        android:layout_marginTop="50dp"
                        android:layout_marginStart="25dp"
                        android:contentDescription="@string/submit_issue" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>