<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Financial_Dashboard">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:text="@string/Financial_tot_Payment"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="170dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:text="Rs.0.00"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:text="@string/Financial_tot_Balance"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="170dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:text="Rs.0.00"
        />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="100dp"
    android:textSize="17sp"
    android:textColor="#000000"
    android:fontFamily="monospace"
    android:textStyle="bold"
    android:text="@string/Financial_tot_Spending"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:textSize="17sp"
        android:layout_marginStart="170dp"
        android:textColor="#000000"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:text="Rs.0.00"
        />
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barchart"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp">
    </com.github.mikephil.charting.charts.BarChart>
</RelativeLayout>
</ScrollView>