<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    tools:context=".PaymentAdd">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        app:headerLayout="@layout/activity_menu__header"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-1dp"
                android:layout_marginEnd="20dp">

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="57dp"
                    android:contentDescription="@string/issue_header"
                    android:src="@drawable/addpaymentheader" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/nav3"
                    android:src="@drawable/nav3" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="285dp"
                    android:layout_marginTop="9dp"
                    android:contentDescription="@string/issue_logout"
                    android:src="@drawable/logout" />

            </RelativeLayout>

            <!--ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:scaleType="centerCrop"
                    android:background="@drawable/background">

                    <ImageView
                        android:layout_width="312dp"
                        android:layout_height="500dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="20dp"
                        android:alpha="0.8"
                        android:contentDescription="@string/rectangle_issue"
                        android:src="@drawable/issue_rectangle" />

                    <EditText
                        android:id="@+id/payStudentId"
                        android:layout_width="260dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="-400dp"
                        android:layout_marginLeft="-190dp"
                        android:autofillHints=""
                        android:background="@drawable/issue_button"
                        android:gravity="center"
                        android:hint="Student Id"
                        android:inputType="text"
                        android:textColorHint="#A9A9A9"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/payTermId"
                        android:layout_width="260dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp"
                        android:autofillHints=""
                        android:background="@drawable/issue_button"
                        android:gravity="center"
                        android:hint="Term"
                        android:inputType="text"
                        android:textColorHint="#A9A9A9"
                        android:textSize="24sp" />



                    <EditText
                        android:id="@+id/payPaymentId"
                        android:layout_width="260dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp"
                        android:autofillHints=""
                        android:background="@drawable/issue_button"
                        android:gravity="center"
                        android:hint="Payment"
                        android:inputType="text"
                        android:textColorHint="#A9A9A9"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/paymentSubmit"
                        android:layout_width="210dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="35dp"
                        android:contentDescription="@string/submit_issue"
                        android:src="@drawable/issue_submit" />

                </LinearLayout>
            <!--/ScrollView-->
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>
